src/objects/Sprint__c.object
<CustomObject>
    <fields>
        <fullName>Actual_End_Date__c</fullName>
        <label>Actual End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Assigned_Level_of_Effort__c</fullName>
        <label>Assigned Level of Effort</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Available_Capacity__c</fullName>
        <formula>Sprint_Capacity__c  -  Assigned_Level_of_Effort__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Available Capacity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Sprints</relationshipLabel>
        <relationshipName>Sprints</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Projected_End_Date__c</fullName>
        <label>Projected End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sprint_Capacity__c</fullName>
        <label>Sprint Capacity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Planned</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Sprint</label>
    <listViews>
        <fullName>Active_Sprints</fullName>
        <columns>NAME</columns>
        <columns>Project__c</columns>
        <columns>Status__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Projected_End_Date__c</columns>
        <columns>Actual_End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>In Progress</value>
        </filters>
        <label>Active Sprints</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Project__c</columns>
        <columns>Status__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Projected_End_Date__c</columns>
        <columns>Actual_End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_DoubleClick_Sprints</fullName>
        <columns>NAME</columns>
        <columns>Project__c</columns>
        <columns>Status__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Projected_End_Date__c</columns>
        <columns>Actual_End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project__c</field>
            <operation>contains</operation>
            <value>DoubleClick</value>
        </filters>
        <label>All DoubleClick Sprints</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
            <group>DoubleClick_Support_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Release_Management_Sprints</fullName>
        <columns>NAME</columns>
        <columns>Project__c</columns>
        <columns>Status__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Projected_End_Date__c</columns>
        <columns>Actual_End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>10K Release Management</value>
        </filters>
        <label>All Release Management Sprints</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X10K_Active_Sprints</fullName>
        <columns>NAME</columns>
        <columns>Project__c</columns>
        <columns>Status__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Projected_End_Date__c</columns>
        <columns>Actual_End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>In Progress</value>
        </filters>
        <filters>
            <field>Project__c</field>
            <operation>contains</operation>
            <value>10K</value>
        </filters>
        <label>10K Active Sprints</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Sprint Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sprints</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>